feat: add manifest

--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
+    <link rel="manifest" href="manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="images/light-sabers-couleur.svg" />
     <title>Sabre laser - match</title>
     <style>
       .dark {
